<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectFragment">

    <Button
        android:id="@+id/button_clean_client"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/button_clean_text"
        app:backgroundTint="#7687E1"
        app:layout_constraintBottom_toTopOf="@+id/button_prefill_cmd"
        app:layout_constraintEnd_toEndOf="@+id/button_unsubscribe"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_subscribe"
        app:layout_constraintTop_toBottomOf="@+id/button_subscribe"
        app:layout_constraintVertical_bias="0.645"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_prefill_cmd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/button_prefill_text"
        app:layout_constraintBottom_toTopOf="@+id/button_prefill_ef"
        app:layout_constraintEnd_toEndOf="@+id/button_unsubscribe"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_subscribe"
        app:layout_constraintTop_toBottomOf="@+id/button_subscribe"
        app:layout_constraintVertical_bias="1.0"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_prefill_ef"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_prefill_text2"
        app:layout_constraintBottom_toTopOf="@+id/button_disconnect"
        app:layout_constraintEnd_toEndOf="@+id/button_unsubscribe"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_subscribe"
        app:layout_constraintTop_toBottomOf="@+id/button_subscribe"
        app:layout_constraintVertical_bias="1.0"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_disconnect_text"
        app:backgroundTint="#810F36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_unsubscribe"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_subscribe" />

    <Button
        android:id="@+id/button_subscribe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_subscribe_text"
        app:layout_constraintEnd_toStartOf="@+id/button_unsubscribe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edittext_subtopic"
        app:layout_constraintTop_toBottomOf="@+id/edittext_subtopic" />

    <Button
        android:id="@+id/button_unsubscribe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_unsubscribe_text"
        app:layout_constraintEnd_toEndOf="@+id/edittext_subtopic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_subscribe"
        app:layout_constraintTop_toBottomOf="@+id/edittext_subtopic" />

        <Button
            android:id="@+id/button_publish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_publish_text"
            app:layout_constraintEnd_toEndOf="@+id/edittext_pubmsg"
            app:layout_constraintStart_toStartOf="@+id/edittext_pubmsg"
            app:layout_constraintTop_toBottomOf="@+id/edittext_pubmsg" />

    <EditText
        android:id="@+id/edittext_pubtopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/topic_text"
        android:ems="15"
        android:hint="@string/topic_text"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_pubtopic" />

    <EditText
        android:id="@+id/edittext_subtopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/topic_text"
        android:ems="15"
        android:hint="@string/topic_text"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_subtopic" />

    <EditText
        android:id="@+id/edittext_pubmsg"
        android:layout_width="364dp"
        android:layout_height="39dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:autofillHints="@string/message"
        android:ems="15"
        android:hint="@string/type_message"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_pubmsg" />

    <TextView
        android:id="@+id/textview_pubtopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/topic_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_subtopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/topic_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_publish" />

    <TextView
        android:id="@+id/textview_pubmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_pubtopic" />

</androidx.constraintlayout.widget.ConstraintLayout>