<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientFragmentRT">

    <TextView
        android:id="@+id/textWrist3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/Wrist3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarJ5" />

    <TextView
        android:id="@+id/textBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textShoulder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/Shoulder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarJ1" />

    <TextView
        android:id="@+id/textWrist2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/Wrist2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarJ4" />

    <TextView
        android:id="@+id/textElbow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/Elbow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarJ2" />

    <TextView
        android:id="@+id/textWrist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/Wrist1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarJ3" />

    <!--FORMATO PARA ROS -->

    <SeekBar
        android:id="@+id/seekBarJ1"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:max="360"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBase" />

    <SeekBar
        android:id="@+id/seekBarJ4"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:max="360"
        android:progress="-90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWrist" />

    <SeekBar
        android:id="@+id/seekBarJ5"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:max="360"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWrist2" />

    <SeekBar
        android:id="@+id/seekBarJ6"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:max="360"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWrist3" />

    <SeekBar
        android:id="@+id/seekBarJ3"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:max="360"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textElbow" />

    <SeekBar
        android:id="@+id/seekBarJ2"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:max="360"
        android:progress="-90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textShoulder" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="32dp"
        android:text="String Format"
        android:textColor="#BD0D0D"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/rosimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/seekBarJ1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <ImageView
        android:id="@+id/rosimg"
        android:layout_width="52dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:contentDescription="@string/rosAccess"
        android:focusable="true"
        android:src="@mipmap/ros_ic"
        app:layout_constraintEnd_toStartOf="@+id/ROScheck"
        app:layout_constraintStart_toEndOf="@+id/seekBarJ1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mqttimg"
        android:layout_width="50dp"
        android:layout_height="71dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:src="@mipmap/mqtt_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toEndOf="@+id/seekBarJ2"
        app:layout_constraintTop_toBottomOf="@+id/rosimg" />

    <CheckBox
        android:id="@+id/MQTTcheck"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ROScheck" />

    <CheckBox
        android:id="@+id/ROScheck"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toEndOf="@+id/rosimg"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/auto_move"
        android:layout_width="97dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:text="enable auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/seekBarJ2"
        app:layout_constraintTop_toBottomOf="@+id/mqttimg" />

    <CheckBox
        android:id="@+id/POINTcheck"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toEndOf="@+id/point"
        app:layout_constraintTop_toBottomOf="@+id/auto_move" />

    <ImageView
        android:id="@+id/cobot"
        android:layout_width="84dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:src="@mipmap/point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarJ6"
        app:layout_constraintTop_toBottomOf="@+id/point"
        app:layout_constraintVertical_bias="0.015" />

    <CheckBox
        android:id="@+id/COBOTcheck"
        android:layout_width="34dp"
        android:layout_height="42dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cobot"
        app:layout_constraintTop_toBottomOf="@+id/POINTcheck" />

    <ImageView
        android:id="@+id/point"
        android:layout_width="50dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/cobot"
        app:layout_constraintStart_toEndOf="@+id/seekBarJ5"
        app:layout_constraintTop_toBottomOf="@+id/auto_move" />

    <CheckBox
        android:id="@+id/getDTpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:checked="false"
        android:text="Get DT pose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cobot" />

    <CheckBox
        android:id="@+id/getPRpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:checked="false"
        android:text="Get PR pose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getDTpose" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="44dp"/>

    <TextView
        android:id="@+id/baseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shoulderValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarJ2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/elbowValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarJ3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wrist1Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarJ4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wrist2Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarJ5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wrist3Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarJ6"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/getPreviousDTpose"
        android:layout_width="102dp"
        android:layout_height="95dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:text="Get Previous DT pose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getPRpose" />


</androidx.constraintlayout.widget.ConstraintLayout>